# vidseek

./: .env.example  .gitignore  ASR.py  HybridRetriever.py  OCR.py  ObjectDetector.py  Project Code.xlsx  README.md  SceneSegmenter.py  SentenceSegmenter.py  Transformer.py  VRD.py  alembic.ini  api.py  datastructures.py  main.py  makefile  pyproject.toml  pyrightconfig.json  requirements.txt  retrieval.py  test.ipynb  test.py  test_2.ipynb  test_embeddings.py
Docs/: vidseek_report.tex
Docs/Expirements/: IVF_1_vs_2_Comparison.ipynb
Expirements/HNSW/: hnsw_evaluation.ipynb
Expirements/IVF/: .gitignore  ivf_evaluation.ipynb
Expirements/SceneSegmentation/: .gitignore  trial1.ipynb  trial2.ipynb  trial3.ipynb  trial4.ipynb  utils.py
Expirements/VRD/: .gitignore  vrd_visual_phrases.ipynb  vrd_visual_phrases_deep.ipynb
OCR/: CRNN_text_rec.ipynb  Evaluation.ipynb  MSER.ipynb  OCR.py  SVM_HoG_model.ipynb  craft.ipynb  craft_1.ipynb  craft_2.ipynb  craft_3.ipynb  detect_non_chars.ipynb  east.ipynb  from_scratch_SVM.ipynb  hog_manual_svm_model.joblib  mser_flow.py  one_class_svm.ipynb  ovo_svm.py  text_detector_east.ipynb
OCR/models/: is_char_svm_model.joblib
OCR/results/: easyocr_results.joblib  mser_results.joblib
OCR/src/: OCR.py  testOCR.ipynb
OCR/utils/: Hog.py  MSER.py  craft.py  ovo_svm.py  text_detector.py  word_distance.py
Storage/: ChromaDBVectorStore.py  CustomVectorStore.py  VectorStore.py
Storage/HNSW/: __init__.py  hnsw_index.py  hnsw_store.py
Storage/IVF/: __init__.py  two_level_index.py
Transformer/: data.py  evaluate_model.ipynb  evaluate_search.py  kaggle_running.ipynb  local_running.ipynb  requirements.txt  train.py  train_compare.py  train_triplet.py  train_triplet_hard.py  trainer.py  utils.py  vocab.pkl
alembic/: env.py
audio/: ASR.py  SentenceSegmenter.py
hybrid_embedder/: Evaluation.ipynb  bm25_encoder.py  embedder_adapter.py  lsa_encoder.py  main.py  tokenizer.py
transformer/: data.py  kaggle_running.ipynb  model.py  train.py
vidseek-ui/: package-lock.json  package.json
visual/: HoG_model.ipynb  MSER.ipynb  OCR.py  ObjectDetector.py  SceneSegmenter.py  VRD.py
(+139 files in other folders)
