[project]
name = "vidseek"
version = "0.1.0"
description = ""
authors = [
    {name = "Team ronix"}
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "torch (>=2.10.0,<3.0.0)",
    "torchvision (>=0.25.0,<0.26.0)",
    "transformers (>=5.2.0,<6.0.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "easyocr (>=1.7.2,<2.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "scenedetect (>=0.6.7.1,<0.7.0.0)",
    "ultralytics (>=8.4.16,<9.0.0)",
    "sentence-transformers (>=5.2.3,<6.0.0)",
    "chromadb (>=1.5.1,<2.0.0)",
    "sqlalchemy (>=2.0.47,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)"
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
