[project]
name = "vidseek"
version = "0.1.0"
description = ""
authors = [
    {name = "Team ronix"}
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "torch (>=2.10.0,<3.0.0)",
    "torchvision (>=0.25.0,<0.26.0)",
    "transformers (>=5.2.0,<6.0.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "easyocr (>=1.7.2,<2.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "scenedetect (>=0.6.7.1,<0.7.0.0)",
    "ultralytics (>=8.4.16,<9.0.0)",
    "sentence-transformers (>=5.2.3,<6.0.0)",
    "sqlalchemy (>=2.0.47,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "fastapi (>=0.136.3,<0.137.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "joblib (>=1.3.0,<2.0.0)",
    "resampy (>=0.4.3,<0.5.0)",
    "soundfile (>=0.14.0,<0.15.0)",
    "google-generativeai (>=0.8.0,<1.0.0)",
    "opencv-python-headless (>=4.13.0.92,<5.0.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "scikit-learn (>=1.6.1,<1.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
